# fingerprinting-llms

./: .gitignore  Burstiness-AllReuters-v1.5.ipynb  Burstiness-AllReuters-v1.ipynb  Burstiness-AllReuters-v2.ipynb  Burstiness-Author-AaronPressman.ipynb  Burstiness-Author-EdnaFernandes.ipynb  Burstiness-Author-KevinDrawbaugh.ipynb  Burstiness-Author-LynnleyBrowning.ipynb  Burstiness-Authors-A-G.ipynb  Burstiness-Authors-AandB.ipynb  Burstiness-Authors-All.ipynb  Burstiness-EventAnalysis-v1.ipynb  Burstiness-FourierDeepDive-v1.ipynb  Burstiness-HC3-v1.ipynb  Burstiness-HC3-v2.ipynb  Burstiness-MAGE-v1.ipynb  Burstiness-MAGE-v2.ipynb  Burstiness-StatsDeepDive-v1.ipynb  Burstiness-StatsDeepDive-v2.ipynb  Burstiness-WaveletDeepDive-v1.ipynb  EDA-LogProbs-Reuters.ipynb  EDA-Stylometric-MICUSP.ipynb  EDA-Stylometric-Reuters.ipynb  Makefile  README.md  Token-Logprob-Visualization-v2.ipynb  burstiness_threshold_eda.ipynb  conda-lock.cpu.conda-lock.yml  conda-lock.gpu.cuda121.conda-lock.yml  eda_reuters_5050.ipynb  logprob_bias_analysis.ipynb  pyproject.toml  reuters_5050_eda.ipynb
data/: .gitignore
docs/: DATASET_CONSIDERATIONS.md  ISSUES.md  MEETINGS.md  PROMPTING.md  RESEARCH_PAPER.md  SCORING_TEXT.md
env/: README.md  environment.base.yml  environment.gpu.cuda121.yml  requirements-vllm.txt  vllm-requirements.txt
report/: .gitignore  README.md  references.bib  report.tex
scripts/: chat.sh  download_hc3.py  download_mage.py  ping-model.sh  preprocess_corpus.py  preprocess_text.py  score_text.py  view-models.sh
serving/: download_model.py  serve-metal.sh
(+17 files in other folders)
